2017.10/_sources/plugins/available/gneiss/gradient-clustering.txt
gradient-clustering: Hierarchical clustering using gradient information.
========================================================================

.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime gneiss gradient-clustering [OPTIONS]

     Build a bifurcating tree that represents a hierarchical clustering of
     features.  The hiearchical clustering uses Ward hierarchical clustering
     based on the mean difference of gradients that each feature is observed
     in. This method is primarily used to sort the table to reveal the
     underlying block-like structures.

   Options:
     --i-table PATH                  Artifact: FeatureTable[Composition |
                                     Frequency | RelativeFrequency]  [required]
                                     The feature table containing the samples in
                                     which the columns will be clustered.
     --m-gradient-file PATH          Metadata file or artifact viewable as
                                     metadata. This option may be supplied
                                     multiple times to merge metadata  [required]
     --m-gradient-category TEXT      Category from metadata file or artifact
                                     viewable as metadata  [required]
                                     Contains
                                     gradient values to sort the features and
                                     samples.
     --p-weighted / --p-no-weighted  [default: True]
                                     Specifies if abundance or
                                     presence/absence information should be used
                                     to perform the clustering.
     --o-clustering PATH             Artifact: Hierarchy [required if not passing
                                     --output-dir]
                                     A hierarchy of feature
                                     identifiers where each tipcorresponds to the
                                     feature identifiers in the table. This tree
                                     can contain tip ids that are not present in
                                     the table, but all feature ids in the table
                                     must be present in this tree.
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>Hierarchical clustering using gradient information.

   Build a bifurcating tree that represents a hierarchical clustering of
   features.  The hiearchical clustering uses Ward hierarchical clustering
   based on the mean difference of gradients that each feature is observed in.
   This method is primarily used to sort the table to reveal the underlying
   block-like structures.

   Parameters
   ----------
   table : FeatureTable[Composition | Frequency | RelativeFrequency]
       The feature table containing the samples in which the columns will be
       clustered.
   gradient : MetadataCategory
       Contains gradient values to sort the features and samples.
   weighted : Bool, optional
       Specifies if abundance or presence/absence information should be used
       to perform the clustering.

   Returns
   -------
   clustering : Hierarchy
       A hierarchy of feature identifiers where each tipcorresponds to the
       feature identifiers in the table. This tree can contain tip ids that
       are not present in the table, but all feature ids in the table must be
       present in this tree.</pre>
       </div>
     </div>
   </div>